2008-07-15  Mirco Bauer <meebey@meebey.net> 

	* Protocols/Irc/IrcProtocolManager.cs: Implemented FindGroupChats().
	
	  Implemented OpenChat().
	
	  Implemented CloseChat().

2008-07-14  Mirco Bauer <meebey@meebey.net> 

	* Protocols/Irc/IrcProtocolManager.cs: Fixed CommandCycle().

2008-07-07  Mirco Bauer <meebey@meebey.net> 

	* Protocols/Irc/IrcProtocolManager.cs: Implemented lag indicator.

2008-06-30  Mirco Bauer <meebey@meebey.net> 

	* Protocols/Irc/IrcProtocolManager.cs: Pass IRC errors to frontend.
	
	  Pass IRC messages to protocol manager also if being on session chat.

2008-06-02  Mirco Bauer <meebey@meebey.net> 

	* Protocols/Irc/IrcProtocolManager.cs: _Run(): Fixed reconnect handling.
	
	  OnDisconnected(): Don't disable the protocol chat, else the user loses
	  the control over the protocol manager.

2008-06-02  Mirco Bauer <meebey@meebey.net> 

	* Protocols/Irc/IrcProtocolManager.cs: Renamed confusing NetworkChatModel to
	  ProtocolChatModel and ChatType.Network to ChatType.Protocol.

2008-04-01  Mirco Bauer <meebey@meebey.net> 

	* AssemblyInfo.cs: Bumped version to 0.5.31

2008-03-02  Mirco Bauer <meebey@meebey.net> 

	* Protocols/Irc/IrcProtocolManager.cs: When connecting to a new server call
	  SyncChat() after AddChat(), else already connected frontends will not
	  get any messages.

2008-03-02  Mirco Bauer <meebey@meebey.net> 

	* Protocols/Irc/IrcProtocolManager.cs: CommandMessageQuery() sends message
	  now once.
	
	  CommandPart() sends part message now correctly when no channel name was
	  given.
	
	  CommandMe() uses now nickname coloring.
	
	  _OnJoin() uses now nickname coloring.
	
	  _OnPart() uses now nickname coloring.

2008-03-02  Mirco Bauer <meebey@meebey.net> 

	* Protocols/Irc/IrcProtocolManager.cs: Trim trailing spaces in commands that
	  use space as separator (like op/deop).

2008-03-02  Mirco Bauer <meebey@meebey.net> 

	* Protocols/Irc/IrcProtocolManager.cs: Reply error message when channel is
	  moderated.
