@@ -1,5 +1,12 @@
 2008-07-15  Mirco Bauer <meebey@meebey.net> 
 
+	* Protocols/Irc/IrcProtocolManager.cs: Use global username if server
+	  username is empty (closes trac bug #36).
+	
+	  Set highlight for query actions and notices.
+
+2008-07-15  Mirco Bauer <meebey@meebey.net> 
+
 	* Protocols/Irc/IrcProtocolManager.cs: Implemented FindGroupChats().
 	
 	  Implemented OpenChat().
